[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "alt-query-branch"
version = "0.0.0"
description = "Find matching packages in ALT branches"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
]
authors = [
    { email = "ancieg@altlinux.org" },
    { name = "Anton Zhukharev" }
]
