[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alt-query-branch"
version = "1.2.1"
description = "Find matching packages in ALT branches"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
]
dependencies = [
    "jq>=1.4.0",
    "requests-cache>=0.4.13"
]
authors = [
    { name = "Danil Shein", email = "dshein@altlinux.org" },
    { name = "Anton Farygin", email = "rider@altlinux.org" },
    { name = "Anton Zhukharev", email = "ancieg@altlinux.org" }
]

[project.scripts]
alt-query-branch = "alt_query_branch._internal.entrypoint:main"
